--- a/2019-2020-1-fa/homework/Homework-Week3.tex
+++ b/2019-2020-1-fa/homework/Homework-Week3.tex
@@ -328,7 +328,7 @@ $$0\leq d(f,g)\leq  \bar{d}(f,g), \quad\forall f,g\in C^{0,\alpha}[a,b],$$
 对任意$\epsilon>0$, 取
 $$\delta=\left(\frac{\epsilon}{M}\right)^{\frac{1}{\alpha}}>0,$$
 则对任意$x,y\in [a,b]$且$|x-y|<\delta$, 根据$\alpha\in (0,1]$以及\eqref{3.3-3}式可得
-$$|f_n(x)-f_n(y)|\leq M |x-y|^\alpha<M\delta^\alpha=\epsilon,$$
+$$|f_n(x)-f_n(y)|\leq M |x-y|^\alpha<M\delta^\alpha=\epsilon,\quad \forall n\in \Bbb{N}_+,$$
 因此函数列$\{f_n\}$在$[a,b]$上等度连续.
 
 根据Ascoli-Arezela定理, 点列$\{f_n\}$在空间$(C[a,b],d)$中有收敛子列, 由此可知集合$M$是空间$(C[a,b],d)$中的列紧集.\\
