--- a/2019-2020-1-fa/homework/Homework-Week3.tex
+++ b/2019-2020-1-fa/homework/Homework-Week3.tex
@@ -229,6 +229,9 @@ $$\inf_{x\in M}f(x)=l=\lim_{n\to \infty}f(x_n)=\lim_{k\to \infty}f(x_{n_k})=f\le
 同理可证, 连续映射$f$在紧集$M$上可以取到最大值.
 \end{proof}
 
+\begin{remark}
+上述结论才是数学分析中闭区间上的连续函数最值性的本质. 在一般的度量空间中, 有界闭集不一定是紧集, 有界闭集上的连续映射不一定有最值性.
+\end{remark}
 
 \begin{example}
 \begin{definition}[H\"{o}lder连续函数]设$\alpha\in (0,1]$. 若$f\in C[a,b]$满足
