--- a/2019-2020-1-ma/week4.tex
+++ b/2019-2020-1-ma/week4.tex
@@ -164,121 +164,90 @@
 
 
 
-\title{ 泛函分析作业}
+\title{数学分析作业}
 \author{}
 \date{}
 \maketitle
 
 \section{第4周}
+
+
+
 \begin{example}
-设$X$是完备的度量空间, $T$是$X$到$X$中的映射, 如果存在正整数$m\in \Bbb{N}_+$以及常数     $\alpha \in [0,1)$使得对所有的$x,y\in X$, 都有
-$$d(T^m x, T^m y)\leq \alpha \,d(x,y),$$
-其中$T^m$表示映射$T$作用$m$次, 则$T$在$X$中有且只有一个不动点$x^*$, 特别地, 迭代点列
-$$x_0,\ x_1=Tx_0,\cdots,x_n=Tx_{n-1},\cdots,$$
-在$(X,d)$中收敛于不动点$x^*$.
+设$A,B$为非空有界数集, 并且$A\subset B$, 证明
+   $$\inf B\leq \inf A\leq \sup A\leq \sup B.$$
 \end{example}
 \begin{proof}
-由条件可知映射$T^m:X\to X$是压缩映射, 由于$X$完备, 根据压缩映射原理, $T^m$在$X$上存在唯一的不动点$x^*$, 即
-\begin{equation}\label{4.2-1}
-x^*=T^m x^*.
-\end{equation}
-下证$x^*$也是映射$T$在$X$上的唯一的不动点.
+显然, $\inf A\leq \inf B$. 下证$\inf B\leq \inf A$并且$\sup A\leq \sup B$.
 
-由\eqref{4.2-1}式可得
-$$T x^* =T\left(T^m x^*\right)=T^{m+1} x^*=T^m \left(T x^*\right),$$
-所以$T x^*$也是$T^m$的不动点. 根据$T^m$的不动点的唯一性, 就有
-$T x^*=x^*$, 所以$x^*$也是映射$T$的不动点. 若$x\in X$也是映射$T$的不动点, 则
-$$x=Tx, \ x=Tx=T(Tx)=T^2 x,\cdots, x=T^m x,$$
-即$x$也是$T^m$的不动点. 根据$T^m$的不动点的唯一性, 就有$x^*=x$. 所以$x^*$是映射$T$在$X$上的唯一的不动点.
+假设$\inf B>\inf A$, 则$\inf B$不是集合$A$的下界, 从而存在$x_0\in A$使得$\inf B>x_0$. 另一方面, 由于$A\subset B$，从而也有$x_0\in B$, 于是
+$$\inf B>x_0\geq \inf B,$$
+矛盾.
 
-任取$x_0\in X$. 通过映射$T$构造迭代点列
-$$x_0, \ x_1=Tx_0,\ x_2=Tx_1,\cdots,x_n=T x_{n-1},\cdots.$$
-任取
-$$s\in \{0,1,2,\cdots,m-1\},$$
-令
-\begin{eqnarray*}
-% \nonumber to remove numbering (before each equation)
-  &&y_0= T^s x_0=x_s, \\
-  &&y_1=T^m y_0=x_{m+2},\\
-  &&y_2=T^m y_1=x_{2m+s},\\
-  &&\cdots,\\
-  &&y_n=T^m y_{n-1}=x_{nm+s},\\
-  &&\cdots.
-\end{eqnarray*}
-根据由于$T^m$是压缩映射, $X$完备, 则迭代点列$y_n$收敛于$T^m$的不动点$x^*$, 即
-$$\lim_{n\to \infty}x_{nm+s} = x^*,\quad \forall s \in \{0,1,2,\cdots,m-1\}.$$
-于是对任意$\epsilon>0$, 以及任意$s\in \{ 0,1,2,\cdots,m-1\}$, 邻域$U\left(x^*,\epsilon\right)$之外只含有点列$\{x_{nm+s}\}_{n=0}^\infty$中的有限多项, 将这些项的集合记为$A_s$. 由于
-$$ \bigcup_{s=0}^{m-1}\bigcup_{n=0}^\infty \{x_{nm+s}\}=\bigcup_{n=0}^\infty \bigcup_{s=0}^{m-1} \{x_{nm+s}\}=\bigcup_{n=0}^\infty\{x_n\},$$
-于是点列$\{x_n\}$在邻域$U\left(x^*,\epsilon\right)$之外的项的全体为有限集
-$$\bigcup_{s=0}^{m-1}A_s,$$
-所以
-$$\lim_{n\to \infty}x_n =x^*.$$
+假设$\sup A>\sup B$, 则$\sup B$不是集合$A$的上界, 从而存在$x_1\in A$使得$\sup B<x_1$. 另一方面, 由于$A\subset B$，从而也有$x_1\in B$, 于是
+$$\sup B<x_1\leq \sup B,$$
+矛盾.
+
+综上, $\inf B\leq \inf A\leq \sup A\leq \sup B.$
 \end{proof}
 
-\begin{remark}
-该题中的映射$T$自身不一定是压缩映射.
- 证明过程后半部分用到了点列收敛的另外一种等价定义:
-  \begin{quote}
-  任给$\epsilon>0$, 若点列$\{x_n\}$在邻域$U(x,\epsilon)$之外至多只有有限多项, 则称点列$\{x_n\}$收敛于$x$.
-  \end{quote}
-点列极限与其子列极限的转化思路, 可参考华东师大《数学分析（第四版·上册）》P27例8和P35-P36习题7(2)的证明.
-\end{remark}
-
-\begin{example}[Volterra型线性积分方程解的存在唯一性问题] 设$f\in C[a,b]$, 二元函数$k(t,s)$在$[a,b]\times[a,b]$上连续. 利用上题的结论证明, 对任意$\lambda\in\Bbb{R}$, 积分方程
-\begin{equation}\label{Volterra-1}
-\phi(t)-\lambda \int_0^t k(t,s)\phi(s)\d s=f(t),\quad t\in [a,b]
-\end{equation}
-总存在唯一的连续函数解$\phi\in C[a,b]$.
+\begin{example}
+设$S$为非空有下界(不一定有上界)的数集, 并且$\inf S>0$, 证明集合
+   $$S^{-1}=\left\{x^{-1}\ |\ x\in S \right\}$$
+   有界并且
+   $$\sup S^{-1}>0,\quad\inf S^{-1}\geq 0,\quad \sup S^{-1}=\frac{1}{\inf S}.$$
 \end{example}
-
 \begin{proof}
-任取$\phi\in C[a,b]$, 定义$[a,b]$上的函数$T\phi$:
-\begin{equation}\label{4.3-1}
-(T\phi)(t)=f(t)+\lambda \int_a^t k(t,s)\phi(s) \d s,\quad t\in [a,b].
+Step1. 任取$y\in S^{-1}$, 令$x=y^{-1}$, 则$x\in S$,
+$$x\geq \inf S>0,$$
+从而
+\begin{equation}\label{4.1-1}
+0<y\leq \frac{1}{\inf S},\quad \forall y\in S^{-1}.
 \end{equation}
-由于$\phi,f\in C[a,b]$, $k(t,s)$在$[a,b]\times [a,b]$上连续, 由上式可知$T\phi\in C[a,b]$. 由此得到映射
-\begin{eqnarray*}
-% \nonumber to remove numbering (before each equation)
-  T:\ C[a,b] &\to &C[a,b],\\
-  \phi&\mapsto & T\phi.
-\end{eqnarray*}
-显然, 积分方程\eqref{Volterra-1}在$[a,b]$上的连续函数解等价于映射$T$在空间$C[a,b]$中的不动点.
+所以$0$是$S^{-1}$的一个下界, $\frac{1}{\inf S}$是$S$的一个上界, 并且
+$$\sup S^{-1}>0,\quad\inf S^{-1}\geq 0.$$
 
-(下面验证$T$是否是压缩映射, 若不是, 继续验证$T^m$是否是压缩映射)
+Step2. 由Step1可知$\sup S^{-1}\leq \frac{1}{\inf S}$. 下面排除$\sup S^{-1}< \frac{1}{\inf S}$的情况.
 
-对任意$\phi_1,\phi_2\in C[a,b]$以及任意$t\in [a,b]$, 由\eqref{4.3-1}可得
-\begin{eqnarray*}
-&&\left|(T\phi_1)(t)-(T\phi_2)(t)  \right|\\
-&=&|\lambda|\cdot\left| \int_a^t k(t,s)\left[\phi_1(s)-\phi_2(s)\right] \d s\right|\\
-&\leq &|\lambda|\cdot \int_a^t \max_{\substack{a\leq t\leq b\\a\leq s\leq  b}}|k(t,s)|\cdot \max_{t\in [a,b]}\left|\phi_1(s)-\phi_2(s)\right| \d s\\
-&=&M|\lambda|(t-a)\cdot d(\phi_1,\phi_2),
-\end{eqnarray*}
-其中
-$$M= \max_{\substack{a\leq t\leq b\\a\leq s\leq  b}}|k(t,s)|\geq 0.$$
-(这样看$T$不一定是压缩映射)\\
-利用上述结果, 继续计算可得
-\begin{eqnarray*}
-&&\left|(T^2\phi_1)(t)-(T^2\phi_2)(t)  \right|\\
-&=&|\lambda|\cdot\left| \int_a^t k(t,s)\left[(T\phi_1)(s)-(T\phi_2)(s)\right] \d s\right|\\
-&\leq &|\lambda|\cdot \int_a^t M\cdot\left|(T\phi_1)(s)-(T\phi_2)(s)\right| \d s\\
-&\leq &M^2|\lambda|^2\int_a^t (s-a)\cdot d(\phi_1,\phi_2)\d s\\
-&=&\frac{\big[M|\lambda|(t-a)\big]^2}{2}d(\phi_1,\phi_2).
-\end{eqnarray*}
-一直做下去, 对任意$m\in \Bbb{N}_+$就有
-$$\left|(T^m\phi_1)(t)-(T^m\phi_2)(t)  \right|\leq \frac{\big[M|\lambda|(t-a)\big]^m}{m!}d(\phi_1,\phi_2),\quad \forall t\in [a,b],$$
-上式两端对$t\in [a,b]$取最大值可得
-\begin{equation*}
-d\left(T^m\phi_1, T^m\phi_2  \right)\leq \frac{\big[M|\lambda|(b-a)\big]^m}{m!}d(\phi_1,\phi_2).
-\end{equation*}
-对任意$a\in \Bbb{R}$, 都有$\lim_{m\to \infty}\frac{a^m}{m!}=0$, 由该事实可知, 存在充分大的一个正整数$m$使得
-$$\alpha =\frac{\big[M|\lambda|(b-a)\big]^m}{m!}\in [0,1),$$
-此时$T^m$就是完备度量空间$C[a,b]$上的压缩映射. 根据上一个问题的结论, 映射$T$在$C[a,b]$中存在唯一的不动点, 所以积分方程\eqref{Volterra-1}在$[a,b]$上存在唯一的连续函数解.
+反证法, 假设$\sup S^{-1}< \frac{1}{\inf S}$成立, 由于$\sup S^{-1}>0$, 则
+$$0<\inf S<\frac{1}{\sup S^{-1}}.$$
+所以$\frac{1}{\sup S^{-1}}$不是$S$的下界, 存在$x\in S$使得
+$$0<\inf S\leq x<\frac{1}{\sup S^{-1}}.$$
+令$y=x^{-1}$, 则$y\in S^{-1}$,
+$$0<\frac{1}{y}=x<\frac{1}{\sup S^{-1}},$$
+从而
+$$y>\sup S^{-1}.$$
 \end{proof}
 
+\begin{example}
+证明以下等式和不等式:
+\begin{itemize}
+    \item[(1)] 设$a,b\in \Bbb{R}$, 则
+    $$\big||a|-|b|\big|\leq |a-b|,\quad \frac{|a+b|}{1+|a+b|}\leq \frac{|a|}{1+|a|}+\frac{|b|}{1+|b|}.$$
 
+    \item[(2)] 设$a,b\in \Bbb{R}$, $n\in \Bbb{N}_+$且$n\geq 2$, 则
+    $$\begin{array}{l}
+    a^n-b^n=(a-b)(a^{n-1}+a^{n-2}b+\cdots+ab^{n-2}+b^{n-1}),
+    \end{array}$$
+    \item[(3)] Bernoulli(伯努利)不等式: 设$h\geq -1$, $n\in \Bbb{N}_+$, 则
+        $$(1+h)^n\geq 1+nh.$$
+        特别地, 如果还有$h\geq 0$并且$n>2$, 则还成立
+        $$(1+h)^n>\frac{n(n-1)}{2}h^2>\frac{n^2h^2}{4}.$$
 
+    \item[(4)] 算术-几何平均值不等式: 设$a_1,a_2,\cdots,a_n$是$n$个非负实数, 则
+    $$\frac{a_1+a_2+\cdots+a_n}{n}\geq \sqrt[n]{a_1\cdot a_2\cdot\cdots\cdot a_n}.$$
+    如果$a_1,a_2,\cdots,a_n$都是正实数, 还成立几何-调和平均值不等式:
+    $$\sqrt[n]{a_1\cdot a_2\cdot\cdots\cdot a_n}\geq \frac{n}{\frac{1}{a_1}+\frac{1}{a_2}+\cdots+\frac{1}{a_n}}.$$
+    \item[(5)] $$\begin{array}{l}
+    \sum\limits_{k=1}^n k^2=1^2+2^2+3^2+\cdots n^2=\frac{n(n+2)(2n+1)}{6}.\\
+    \sum\limits_{k=1}^n k^3=1^3+2^3+3^3+\cdots n^3=\left(\frac{n(n+1)}{2} \right)^2
+    \end{array}$$
 
+    \textbf{注:} $\sum\limits_{k=1}^n s_k$表示对$s_1,s_2,\cdots,s_n$按下标$k$从$1$到$n$求和, 即$\sum\limits_{k=1}^n s_k=s_1+s_2+\cdots+s_n$.
 
+    \item[(6)] 若$0<x<\frac{\pi}{2}$, 则$\sin x<x <\tan x$. 若$x\in \Bbb{R}$, 则$|\sin x|\leq |x|$.
+    \end{itemize}
+\end{example}
 
 
 \end{document}
